fixed quiz jumplink

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -14,6 +14,10 @@ body a{
   color: #c16290;
 }
 
+.quiz-jump{
+  color: #000;
+}
+
 div.success, div.error {
   position: absolute;
   top: 0;
